--- a/style.css
+++ b/style.css
@@ -22,3 +22,42 @@ html {
     justify-content: space-between; /* le « trou » */
     align-items: center; /* centrage vertical */
   }
+
+          /* Styles pour le panneau latéral */
+          .sidebar {
+            height: 100%;
+            width: 60px;
+            position: fixed;
+            top: 0;
+            left: 0;
+            background-color: #111;
+            overflow-x: hidden;
+            transition: 0.5s;
+            padding-top: 60px;
+        }
+
+        .sidebar:hover {
+            width: 250px;
+        }
+
+        .sidebar a {
+            padding: 10px 15px;
+            text-decoration: none;
+            font-size: 18px;
+            color: white;
+            display: block;
+            transition: 0.3s;
+        }
+
+        .sidebar a:hover {
+            color: #f1f1f1;
+        }
+
+        .main-content {
+            margin-left: 60px;
+            transition: margin-left 0.5s;
+        }
+
+        .sidebar:hover ~ .main-content {
+            margin-left: 250px;
+        }
